Stereo drawing in image editor broken (shows only right eye) #60775

Closed
opened 2019-01-22 23:53:47 +01:00 by Dalai Felinto · 5 comments

Blender Version
Broken: 86ec304ffa (as well as master HEAD - 178299278b).
Worked: 86ec304ffab^

Short description of error
Stereoscopy 3D drawing is not working well in the image editor.

Exact steps for others to reproduce the error
Just open any multi-view EXR in the image editor.

E.g.: https://github.com/openexr/openexr-images/tree/master/MultiView

Optionally you can enable stereoscopy 3D and render

**Blender Version** Broken: 86ec304ffab (as well as master HEAD - 178299278b7). Worked: 86ec304ffab^ **Short description of error** Stereoscopy 3D drawing is not working well in the image editor. **Exact steps for others to reproduce the error** Just open any multi-view EXR in the image editor. E.g.: https://github.com/openexr/openexr-images/tree/master/MultiView Optionally you can enable stereoscopy 3D and render
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Clément Foucault was assigned by Dalai Felinto 2019-01-23 00:40:26 +01:00
Author
Owner

Added subscriber: @fclem

Added subscriber: @fclem
Author
Owner

@fclem, I managed to pinpoint this to your commit ( 86ec304ffa). I can look at this later, but feel free to jump in meanwhile.

@fclem, I managed to pinpoint this to your commit ( 86ec304ffab). I can look at this later, but feel free to jump in meanwhile.

This issue was referenced by d96f1fcd39

This issue was referenced by d96f1fcd39473b5d8add473810a2e804b5c12f3e
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60775
No description provided.