Fix T60775: Stereo drawing in image editor broken (shows only right eye)